// =============================================================================
// Rxflow — Prisma Schema
// Provider : PostgreSQL
// Nota     : Los módulos existentes (tasks, cycles, notifications, epics)
//            siguen usando raw pg.  Prisma gestiona únicamente el dominio
//            License + las relaciones de acceso (Workspace, Project, members).
// =============================================================================

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ── NEW: License domain ──────────────────────────────────────────────────────

model License {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name       String   @db.VarChar(200)
  owner_id   String   @db.Uuid
  created_at DateTime @default(now()) @db.Timestamptz
  updated_at DateTime @default(now()) @db.Timestamptz

  owner      User            @relation("LicenseOwner", fields: [owner_id], references: [id])
  workspaces Workspace[]
  members    LicenseMember[]
  positions  Position[]
  invites    LicenseInvite[]

  @@map("licenses")
}

model LicenseInvite {
  id         String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  license_id String    @db.Uuid
  token      String    @unique @db.VarChar(64)
  role       String    @default("member") @db.VarChar(20)
  role_type  String?   @db.VarChar(100)
  created_by String    @db.Uuid
  expires_at DateTime  @db.Timestamptz
  used_at    DateTime? @db.Timestamptz
  used_by    String?   @db.Uuid
  created_at DateTime  @default(now()) @db.Timestamptz

  license License @relation(fields: [license_id], references: [id], onDelete: Cascade)

  @@index([token])
  @@map("license_invites")
}

model Position {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  license_id String   @db.Uuid
  name       String   @db.VarChar(100)
  created_at DateTime @default(now()) @db.Timestamptz

  license License @relation(fields: [license_id], references: [id], onDelete: Cascade)

  @@unique([license_id, name])
  @@index([license_id])
  @@map("positions")
}

model LicenseMember {
  license_id String   @db.Uuid
  user_id    String   @db.Uuid
  role       String   @default("member") @db.VarChar(20)
  joined_at  DateTime @default(now()) @db.Timestamptz

  license License @relation(fields: [license_id], references: [id], onDelete: Cascade)
  user    User    @relation("LicenseMemberUser", fields: [user_id], references: [id], onDelete: Cascade)

  @@id([license_id, user_id])
  @@map("license_members")
}

// ── Existing tables (read/write via Prisma for relations only) ────────────────

model User {
  id              String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name            String    @db.VarChar(100)
  email           String    @unique @db.VarChar(255)
  password_hash   String    @db.VarChar(255)
  role            String    @default("member") @db.VarChar(50)
  user_type       String    @default("member") @db.VarChar(20)
  role_type       String?   @db.VarChar(100)
  initials        String    @db.VarChar(4)
  avatar_url      String?   @db.Text
  avatar_color    String?   @db.VarChar(20)
  presence_status String    @default("offline")
  last_seen_at    DateTime? @db.Timestamptz
  is_active       Boolean   @default(true)
  created_at      DateTime  @default(now()) @db.Timestamptz
  updated_at      DateTime  @default(now()) @db.Timestamptz

  ownedLicenses     License[]         @relation("LicenseOwner")
  licenseMembers    LicenseMember[]   @relation("LicenseMemberUser")
  workspacesCreated Workspace[]       @relation("WorkspaceCreator")
  workspaceMembers  WorkspaceMember[]
  projectMembers    ProjectMember[]
  assignedTasks     Task[]            @relation("TaskPrimaryAssignee")
  createdTasks      Task[]            @relation("TaskCreator")
  taskAssignees     TaskAssignee[]    @relation("UserTaskAssignees")
  comments          Comment[]         @relation("CommentAuthor")
  activityLogs      ActivityLog[]     @relation("ActivityLogUser")

  @@map("users")
}

model Workspace {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  license_id  String?  @db.Uuid
  name        String
  description String?
  color       String   @default("#6366f1")
  icon        String   @default("layers")
  created_by  String?  @db.Uuid
  created_at  DateTime @default(now()) @db.Timestamptz
  updated_at  DateTime @default(now()) @db.Timestamptz

  license  License?          @relation(fields: [license_id], references: [id], onDelete: Cascade)
  creator  User?             @relation("WorkspaceCreator", fields: [created_by], references: [id])
  members  WorkspaceMember[]
  projects WorkspaceProject[]

  @@map("workspaces")
}

model WorkspaceMember {
  workspace_id String   @db.Uuid
  user_id      String   @db.Uuid
  added_at     DateTime @default(now()) @db.Timestamptz

  workspace Workspace @relation(fields: [workspace_id], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@id([workspace_id, user_id])
  @@map("workspace_members")
}

model Project {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  code        String   @unique @db.VarChar(4)
  name        String   @db.VarChar(100)
  description String?
  methodology String   @default("kanban")
  status      String   @default("activo")
  extra_views Json     @default("[]")
  created_by  String?  @db.Uuid
  created_at  DateTime @default(now()) @db.Timestamptz
  updated_at  DateTime @default(now()) @db.Timestamptz

  members    ProjectMember[]
  workspaces WorkspaceProject[]
  tasks      Task[]

  @@map("projects")
}

model ProjectMember {
  project_id String  @db.Uuid
  user_id    String  @db.Uuid
  role       String  @default("member") @db.VarChar(50)

  project Project @relation(fields: [project_id], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@id([project_id, user_id])
  @@map("project_members")
}

model WorkspaceProject {
  workspace_id String   @db.Uuid
  project_id   String   @db.Uuid
  added_at     DateTime @default(now()) @db.Timestamptz

  workspace Workspace @relation(fields: [workspace_id], references: [id], onDelete: Cascade)
  project   Project   @relation(fields: [project_id], references: [id], onDelete: Cascade)

  @@id([workspace_id, project_id])
  @@map("workspace_projects")
}

// ── Task domain ──────────────────────────────────────────────────────────────

model Epic {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  project_id String   @db.Uuid
  name       String   @db.VarChar(255)
  created_at DateTime @default(now()) @db.Timestamptz
  updated_at DateTime @default(now()) @db.Timestamptz

  tasks Task[]

  @@map("epics")
}

model Task {
  id             String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  sequential_id  Int
  project_id     String    @db.Uuid
  epic_id        String?   @db.Uuid
  cycle_id       String?   @db.Uuid
  assignee_id    String?   @db.Uuid
  title          String    @db.VarChar(255)
  description    String?
  status         String    @default("backlog")
  priority       String    @default("media")
  position       Int       @default(0)
  due_date       DateTime? @db.Timestamptz
  blocked_reason String?
  created_by     String    @db.Uuid
  created_at     DateTime  @default(now()) @db.Timestamptz
  updated_at     DateTime  @default(now()) @db.Timestamptz

  project       Project        @relation(fields: [project_id], references: [id])
  epic          Epic?          @relation(fields: [epic_id], references: [id])
  assignee      User?          @relation("TaskPrimaryAssignee", fields: [assignee_id], references: [id])
  creator       User           @relation("TaskCreator", fields: [created_by], references: [id])
  taskAssignees TaskAssignee[]
  comments      Comment[]
  activityLogs  ActivityLog[]

  @@map("tasks")
}

model TaskAssignee {
  task_id     String   @db.Uuid
  user_id     String   @db.Uuid
  assigned_at DateTime @default(now()) @db.Timestamptz

  task Task @relation(fields: [task_id], references: [id], onDelete: Cascade)
  user User @relation("UserTaskAssignees", fields: [user_id], references: [id], onDelete: Cascade)

  @@id([task_id, user_id])
  @@map("task_assignees")
}

model Comment {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  task_id    String   @db.Uuid
  author_id  String   @db.Uuid
  body       String
  created_at DateTime @default(now()) @db.Timestamptz
  updated_at DateTime @default(now()) @db.Timestamptz

  task   Task @relation(fields: [task_id], references: [id], onDelete: Cascade)
  author User @relation("CommentAuthor", fields: [author_id], references: [id])

  @@map("comments")
}

model ActivityLog {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  task_id    String   @db.Uuid
  user_id    String   @db.Uuid
  action     String
  created_at DateTime @default(now()) @db.Timestamptz

  task Task @relation(fields: [task_id], references: [id], onDelete: Cascade)
  user User @relation("ActivityLogUser", fields: [user_id], references: [id])

  @@map("activity_log")
}

// ── Wiki domain ───────────────────────────────────────────────────────────────
// Tenant: every page belongs to a workspace_id.
// license_id is kept as nullable metadata (legacy, not used for access control).

model WikiPage {
  id             String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  workspace_id   String   @db.Uuid
  license_id     String?  @db.Uuid
  title          String   @db.VarChar(500)
  slug           String   @db.VarChar(255)
  content        Json
  project_code   String?  @db.VarChar(4)
  epic_id        String?  @db.Uuid
  task_id        String?  @db.Uuid
  parent_page_id String?  @db.Uuid
  icon           String?  @db.VarChar(10)
  created_by     String   @db.Uuid
  updated_by     String?  @db.Uuid
  created_at     DateTime @default(now()) @db.Timestamptz
  updated_at     DateTime @default(now()) @updatedAt @db.Timestamptz
  is_archived    Boolean  @default(false)

  parent   WikiPage?  @relation("WikiPageHierarchy", fields: [parent_page_id], references: [id], onDelete: SetNull)
  children WikiPage[] @relation("WikiPageHierarchy")

  @@unique([workspace_id, slug])
  @@index([workspace_id])
  @@index([project_code])
  @@index([epic_id])
  @@index([task_id])
  @@map("wiki_pages")
}
